--- a/app/views/programmes/_listing.html.erb
+++ b/app/views/programmes/_listing.html.erb
@@ -74,10 +74,10 @@
                 </form>
               </div>
              <!-----------------------Search End---------------------------->
-             <!-----------------------FollowUp Filter Start---------------------------->
+             <!-----------------------Export Start---------------------------->
               <div class="col-md-2">
                 <form class="form-inline" role="form">
-                  <div class="form-group pull-right">
+                  <div class="form-group pull-right md">
                     <span class="glyphicon mar0 glyphicon-list-alt"></span>
                     <%= link_to "xls",programmes_path,{id: "xls", 
                                                        data: {ins_id: @institution_id,
@@ -90,7 +90,7 @@
                 </form>
               </div>
             </div>
-            <!-----------------------FollowUp Filter End---------------------------->
+            <!-----------------------Export End---------------------------->
 
        <!-----------------------Ransack Filter End---------------------------->
 
