--- a/app/views/registrations/_form_educational_background.html.erb
+++ b/app/views/registrations/_form_educational_background.html.erb
@@ -1,7 +1,7 @@
 <!-- educational information  - STARTS -->
 <h5>Qualification</h5>
 <div class="row">
- <%= bs(f,[:qua_id,Qualification.order(:name),
+ <%= bs(f,[:qualification_id,Qualification.order(:name),
               :id,
               :name,
               {prompt: "-qualification-"},{}],
