--- a/app/views/reports/_ransack_filter.html.erb
+++ b/app/views/reports/_ransack_filter.html.erb
@@ -47,7 +47,7 @@
                               </span>
                             </div> 
                             <div class="form-group">        
-                              <%= link_to "Restart","/reports/#{@heading}/#{@module}",class: "btn btn-primary marL30" %>
+                              <%= link_to "Restart","/reports/core_modules/#{@module}",class: "btn btn-primary marL30" %>
                             </div>                             
                   </div>
               </div>
