--- a/app/views/analytics/_filter.html.erb
+++ b/app/views/analytics/_filter.html.erb
@@ -31,25 +31,12 @@
 		<% end %>
 	</div>
 </div>
-<% if !@last_months.blank? || !@from.blank? || !@to.blank? %>
-<div class="row padAll10 green-well text-center modal-tab">
-	<span class="bold-subhead">Filtered By:</span> 
-	&nbsp;
-	<%= @last_months.blank? ? nil : @last_months.to_s + "month(s)" %>
-	&nbsp;
-	<%= @from %>
-	&nbsp;
-	<%= @to %>
-</div> 
-<% end %>
+
+<%= filter_indicator %>
 
 <link rel="stylesheet" href="/css/jquery-ui-1.10.4.custom.css">
 
 <script>
-  $('#from, #to').blur(function() {
-    $('#last_months').prop('selectedIndex',0);
-  });
-  $('#last_months').focus(function() {
-    $('#from,#to').val('');
-  });
+     // makes sure either last_months or from/to values will be passed
+   filterIndicator();
 </script>
