--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -8,12 +8,12 @@
 
 	<%= head_total(core) %>
 
-	<%= analytics_listing(core,[["Long","DESC"],["Less","ASC"]],"Time To Join","duration") %> 
+	<%= analytics_listing(core,[["Long","DESC"],["Less","ASC"]],"Time To Join","duration",false) %> 
 
-	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Preferred Course Levels","course_level_weight") %> 
+	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Preferred Course Levels","course_level_weight",true) %> 
 
-	<%= analytics_listing("course_levels",[["Most","DESC"],["Least","ASC"]],"Profitable Course Levels","fees_commission") %>
-	<%= analytics_listing(core,[["More","DESC"],["Less","ASC"]],"Processing Fee Earned Countries","countries_processing_fees") %>
+	<%= analytics_listing("course_levels",[["Most","DESC"],["Least","ASC"]],"Profitable Course Levels","fees_commission",true) %>
+	<%= analytics_listing(core,[["More","DESC"],["Less","ASC"]],"Processing Fee Earned Countries","countries_processing_fees",true) %>
 
 	<% core = "enquiries" %>
 
@@ -21,9 +21,16 @@
 
 	<%= analytics_listing(core,[["Long","DESC"],["Less","ASC"]],"Time To Register","duration") %> 
 
+	<%= analytics_listing("student_sources",[["Most","DESC"],["Least","ASC"]],"Useful Student Sources","enquiries_registered",true) %> 
+
+	<%= analytics_listing("contact_types",[["Most","DESC"],["Least","ASC"]],"Powerful Contact Types","enquiries_registered",true) %> 
+
+	<%= analytics_listing("sub_agents",[["Most","DESC"],["Least","ASC"]],"Valuable Sub Agents","enquiries_registered",true) %> 
+
 	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Popular (Actions)","popular_actions") %> 
 
 	<%= analytics_listing(core,[["Most","reverse"],["Least","compact"]],"Popular (Impressions)","popular_impressions") %>
+	
 
 	<% core = "registrations" %>
 
@@ -33,14 +40,14 @@
 
 	<%= analytics_listing(core,[["Most","reverse"],["Least","compact"]],"Popular (Impressions)","popular_impressions") %>
 
-	<%= analytics_listing(core,[["Most","ASC"],["Least","DESC"]],"Profitable Registrations","fees_commission") %>
+	<%= analytics_listing(core,[["Most","ASC"],["Least","DESC"]],"Profitable Registrations","fees_commission",true) %>
 
 
 	<% core = "institutions" %>
 
 	<%= head_total(core) %>
 
-	<%= analytics_listing(core,[["More","Joined"],["Less","Deferred"]],"Conversion Rate","applied_with") %> 
+	<%= analytics_listing(core,[["More","Joined"],["Less","Deferred"]],"Conversion Rate","applied_with",true) %> 
 
 	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Popular (Actions)","popular_actions") %> 
 
@@ -48,7 +55,7 @@
 
 	<%= analytics_listing(core,[["Long","minus"],["Quick","plus"]],"Time to Make the First Payment","first_payment_duration") %>
 
-	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Profitable Institutions","fees_commission") %>
+	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Profitable Institutions","fees_commission",true) %>
 
 	<% core = "people" %>
 
