--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,18 +1,39 @@
-<script type="text/javascript">
-$(function(){
-  $("ul.tab-menus li.launch").show();
-  $(".tab-menus li").removeClass("active-tab");
-  $("ul.tab-menus li.launch").addClass("active-tab");
-  $("ul.tab-menus li.launch").text('<%= @person.name.titleize %>');
-  $("ul.tab-menus li.launch").attr('data-person_id', '<%= @person.id %>');
-  $("ul.tab-menus li.launch").trigger("click");
-});
+<!-- person show page -->
+<div class="col-md-8">
+  <h3><%= @person.name %></h3>
+</div>
+
+<% a = @person %>
+<div class="col-xs-4 text-right">
+                <div class="form-group">
+                  <%= link_to "Edit", edit_person_path(a), {class: "btn btn-primary"} %>
+                  <%= link_to "Clone", clone_person_path(a), {class: "btn btn-primary"} %>
+              </div>
+</div>
+
+
+
+<div class="row">
+  <div class="col-xs-12">
+      <ul class="nav nav-pills seperator">
+        <li id="basic" class="active">
+          <%= link_to "Basic","/people/#{a.id}" %>
+        </li>
+        <%= render "actions" %>
+      </ul>
+      <!-- some html5 data to be sent to the back end -->
+      <div id="person_id_div" data-person_id='<%= a.id %>' data-model_sing='person' data-model_plu='people' > </div>
+
+      <div id="action_div">
+        <%= render @partial, @locals %>
+      </div>
+  </div>
+</div>
+
+
+
+<script>
+
+ actmm('enquiries');
 
 </script>
-
-<div class="tab-container">
- <%= render 'enquiries/tabs', :stat => "PersonType",:model => "person" %> 
-    <div class="tab-content" id="launch_id">
-
-    </div>
-</div>
