--- a/app/views/reports/_table.html.erb
+++ b/app/views/reports/_table.html.erb
@@ -12,12 +12,59 @@
   </div>     
 </div>
 <br/>
+<% _id = @module.to_s %>
+<% model = @module.singularize.camelize %>
+<% _model = @module.singularize.camelize.constantize %>
+ <!----------------------- Export Details Modal Start---------------------------->
+               
+                <% ctnt = '<form class="form-horizontal" role="form">' +
+                          '<div class="row">' + 
+                          '<div class="col-md-4 text-right" >' + 
+                          label_tag(:user,"Format") +
+                          '</div>' +
+                          '<div class="col-md-3">' + 
+                          select_tag("export_details_format_#{_id}",
+                          options_for_select([["Xls","xls"],["Pdf","pdf"]]),
+                          {prompt: "-format-",
+                          class: "form-control hor-first",
+                          data: {model: model}}) +
+                          '</div>' +
+                          '</div></form>' %>
+
+                <%= render 'shared/modal',id: 'exportDetailsModal',
+                           content: ctnt.html_safe,
+                           header: 'Export Details To',
+                           button: "<span class='form-group'>
+                           <button class='btn btn-primary' id='export_button' data-id='#{_id}'>
+                           Export
+                           </button>
+                           </span>" %>
+                <!-----------------------Export Details Modal End---------------------------->
 <div class="row">
+  <div class="row mass-actions-pills" style="display: none;">
+    <div class="col-md-11">
+        <% if (can? :read, _model) %>              
+                  <span data-value="exportDetails" class="pilled">
+                  <span class="glyphicon glyphicon-save mar0"></span>
+                  <span>Export</span>
+                  </span>
+        <% end %>        
+    </div>
+  </div>
+      <% if @saved_name %>
+      <h4 class="text-center">
+        <b>
+          <%= @saved_name %>
+        </b>
+      </h4>
+      <% end %>
       <div class="well scrollable">
-        <table class="table table-hover dataTable t3000">
+        <table class="table table-hover dataTable t3000" id='<%= _id %>' data-model="<%= model %>">
           <thead>
             <tr>
-              <th><%= check_box_tag :tr %> </th>
+              <th><%= check_box_tag :th,nil,false,{autocomplete: "off",
+                                                   id: "master_check",
+                                                   onclick: "toggleAllCheck(this,'#{_id}');" } %> </th>
               <% cols.except(:associations).each do |c| %>
                 <% name = (c[1].size == 4 ? c[1][1].underscore + "_name" : c[0]).to_sym %>             
                 <th><%= f.sort_link name,name.to_s.titleize,{page: 1},{remote: true} %></th>              
@@ -27,7 +74,8 @@
           <tbody>
             <% results.each do |i| %>                             
               <tr>
-                <td><%= check_box_tag :tr %></td>                
+                <td><%= check_box_tag :tr,i.id,false,{class: 'row_check',id: "tr"} %></td>     
+       
                 <% cols.except(:associations).each do |col| %>
                   <td> <%= i.send(col[0]) %> </td>                                   
                 <% end %> 
@@ -54,4 +102,17 @@
     });
     
     $('span.previous_page,span.next_page').replaceWith("");
+
+    pillClickShowModal('<%= _id %>');
+
+    $('#master_check, .row_check').click(function () {
+     $('.mass-actions-pills').show(); 
+    });
+
+    $('#export_button').click(function (e) {      
+       exportDetails($(this).data('id'));
+       e.preventDefault();
+    });
+
+
 </script>
