--- a/app/views/reports/partial_bar.js.erb
+++ b/app/views/reports/partial_bar.js.erb
@@ -1,1 +1,2 @@
 init_chart("bar",<%= @bar[0].to_s.html_safe %>,'<%= @bar_meta %>',<%= @bar[1].to_json.html_safe %>,"js");
+$("#bar_filter").html("<%= escape_javascript(render :partial => 'reports/charts_filter',locals: {bar: '_bar'}) %>");
