--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,35 +15,33 @@
 
 <div class="row">
 <div class="col-md-12 data-table">
-
-            <div class="col-md-3">
-                <form class="form-inline" role="form">
-                  <div class="form-group pull-right">
-
-                    <%= select_tag :abdc,
+          <div class="row well">        
+            <div class="col-md-2">
+              <div class="bold-subhead row-top"> Filter By </div>
+            </div>
+            <div class="col-md-3 form-group">
+                  <%= select_tag :abdc,
                       options_for_select(Branch.order(:name).map{|i| [i.name,i.id]}),
                       {prompt: "-all branch-",
                        class: "form-control hor-first",
-                       onchange: "filterUsers(this,'branch');"} %>
-                       
-                     
-                  </div>
-                </form>
+                       onchange: "filterUsers(this,'branch');"} %>                  
             </div>
-            <div class="col-md-3">
-                <form class="form-inline" role="form">
-                  <div class="form-group pull-right">
-            <%= select_tag :abdc,
+            <div class="col-md-3 form-group">
+                  <%= select_tag :abdc,
                       options_for_select(Role.order(:name).map{|i| [i.name.titleize,i.id]}),
                       {prompt: "-all role-",
                        class: "form-control hor-first",
                        onchange: "filterUsers(this,'role');"} %>
-                  </div>
-                </form>
             </div>
-            <br/>
-            <br/>
-            <div id="users-table">
+            <div class="col-md-3 form-group">
+                  <%= select_tag :abdc,
+                      options_for_select(Country.order(:name).map{|i| [i.name.titleize,i.id]}),
+                      {prompt: "-all nationality-",
+                       class: "form-control hor-first",
+                       onchange: "filterUsers(this,'country');"} %>
+            </div>
+          </div>  
+            <div class="row well" id="users-table">
                 <%= render 'table' %>
             </div>
 
