--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -25,7 +25,6 @@
 
 	<%= analytics_listing("contact_types",[["Most","DESC"],["Least","ASC"]],"Powerful Contact Types","enquiries_registered",true) %> 
 
-	<%= analytics_listing("sub_agents",[["Most","DESC"],["Least","ASC"]],"Valuable Sub Agents","enquiries_registered",true) %> 
 
 	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Popular (Actions)","popular_actions") %> 
 
@@ -64,6 +63,8 @@
 	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Popular (Actions)","popular_actions") %> 
 
 	<%= analytics_listing(core,[["Most","reverse"],["Least","compact"]],"Popular (Impressions)","popular_impressions") %>
+
+	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Valuable Sub Agents","enquiries_registered",true) %> 
 
 </div>
 </div>
