--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -1,6 +1,6 @@
 <!-- create a new enquiry -->
             <div class="row">
-              <h3 class="border-b">New vEnquiry</h3>
+              <h3 class="border-b">New Enquiry</h3>
             </div>
 
             <div class="new-enq-reg">
