--- a/app/views/shared/_core_listing.html.erb
+++ b/app/views/shared/_core_listing.html.erb
@@ -227,7 +227,7 @@
                                          ["Today","todays"],
                                          ["This Week","this_weeks"],
                                          ["This Month","this_months"],
-                                         ["No FollowUp","no_followups"]]),
+                                         ["No FollowUp","no_follow_ups"]]),
                       {id: "followUpSelect",class: "form-control hor-first",
                        style: "width:130px"} %>
                   </div>
