--- a/app/views/user_configs/manage.html.erb
+++ b/app/views/user_configs/manage.html.erb
@@ -36,8 +36,8 @@ actmm('settings');
 $(".col-md-3 > ul.nav-pills > li#<%= @partial %>").attr('class','active'); 
 actMultiSelect('multiple-select');
 
-colsClick("enq_cols");
-colsClick("reg_cols");
-colsClick("ins_cols");
-colsClick("per_cols");
+colsClick("user_config_enq_cols");
+colsClick("user_config_reg_cols");
+colsClick("user_config_ins_cols");
+colsClick("user_config_per_cols");
 </script>
