--- a/app/views/shared/_follow_up.html.erb
+++ b/app/views/shared/_follow_up.html.erb
@@ -3,7 +3,7 @@
 <div class="col-md-12">
     <% if @list.to_i == 1 && obj.follow_ups.count > 0 %>
     <div class="row">
-      <h4>Follow Ups</h4>
+      <h4 class="bold-subhead">Follow Ups</h4>
     </div>
     <div class="row">
       <table class="table table-striped">
@@ -42,7 +42,7 @@
     
      <div class="row well">
         <div class="row row-top">
-          <h4>New Follow Up</h4>
+          <h4 class="bold-subhead">New Follow Up</h4>
         </div>
 
           <%= form_for(obj) do |f| %>      
