--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -23,7 +23,11 @@
 
 	<%= analytics_listing("student_sources",[["Most","DESC"],["Least","ASC"]],"Useful Student Sources","enquiries_registered",true) %> 
 
+	<%= analytics_listing("student_sources",[["Most","DESC"],["Least","ASC"]],"Profitable Student Sources","fees_commission",true) %> 
+
 	<%= analytics_listing("contact_types",[["Most","DESC"],["Least","ASC"]],"Powerful Contact Types","enquiries_registered",true) %> 
+
+	<%= analytics_listing("contact_types",[["Most","DESC"],["Least","ASC"]],"Profitable Contact Types","fees_commission",true) %> 
 
 
 	<%= analytics_listing(core,[["Most","DESC"],["Least","ASC"]],"Popular (Actions)","popular_actions") %> 
