--- a/app/views/reports/_ransack_filter.html.erb
+++ b/app/views/reports/_ransack_filter.html.erb
@@ -37,6 +37,10 @@
 
               <div class="row text-center">
                   <div class="col-md-12 form-inline">
+                            
+                              <small>Per Page</small>&nbsp;&nbsp;
+                              <%= select_tag :per_page,options_for_select([10,25,50,100],@per_page.to_i),{class: "form-control greendd"} %>
+                            
                             <div class="form-group">        
                               <%= f.submit "Run", class: "btn btn-primary marL30" %>
                             </div>  
