--- a/app/views/reports/_table.html.erb
+++ b/app/views/reports/_table.html.erb
@@ -70,6 +70,7 @@
               <th><%= check_box_tag :th,nil,false,{autocomplete: "off",
                                                    id: "master_check",
                                                    onclick: "toggleAllCheck(this,'#{_id}');" } %> </th>
+              <th> Goto</th>
               <% cols.except(:associations).each do |c| %>
                 <% name = (c[1].size == 4 ? c[1][1].underscore + "_name" : c[0]).to_sym %>             
                 <th><%= f.sort_link name,name.to_s.titleize,{page: 1},{remote: true} %></th>              
@@ -79,7 +80,8 @@
           <tbody>
             <% results.each do |i| %>                             
               <tr>
-                <td><%= check_box_tag :tr,i.id,false,{class: 'row_check',id: "tr"} %></td>     
+                <td><%= check_box_tag :tr,i.id,false,{class: 'row_check',id: "tr"} %></td>   
+                <td><%= link_to "open",i %> </td>  
        
                 <% cols.except(:associations).each do |col| %>
                   <td> <%= i.send(col[0]) %> </td>                                   
